--- a/dashboard/templates/dashboard_user.html
+++ b/dashboard/templates/dashboard_user.html
@@ -47,8 +47,7 @@
 
         /* Styles de la barre de navigation principale (header) */
         header {
-            background-color: var(--bg-white);
-            box-shadow: 0 2px 5px var(--shadow-light);
+            background-color: #f8f9fa;
             position: sticky;
             top: 0;
             z-index: 1000;
@@ -200,7 +199,7 @@
     <div class="layout-container flex h-full grow flex-col">
         <div class="w-full px-6 py-2">
             <main class="layout-content-container flex flex-col max-w-full w-full flex-1">
-                <header class="flex flex-col border-b border-solid border-b-[#f1efe9] px-10 py-3">
+                <header class="flex flex-col px-10 py-3">
                     <div class="flex items-center justify-between whitespace-nowrap pb-3">
                         <div class="flex items-center gap-4 text-[#191610] flex-1">
                             <div class="size-4">
