Update resource details page with multiple changes

--- a/ressources/templates/ressources.html
+++ b/ressources/templates/ressources.html
@@ -272,7 +272,7 @@
                         <p class="text-[#191610] tracking-light text-[32px] font-bold leading-tight">Ressources</p>
                     </div>
                     <!-- Bouton d'ajout de ressource -->
-                    <button class="add-resource-btn" onclick="window.location.href='/ressources/add/'">Add Resource</button>
+                    <button class="add-resource-btn" onclick="window.location.href='/ressources/add/'">Ajouter une Ressource</button>
                 </div>
                 <div class="px-4 py-3">
                     <label class="flex flex-col min-w-40 h-12 w-full">
